crates/cargo-tsuno/tests/fixtures/verify_cli/fail/reports_failing_assertion.rs
#[tsuno::verify]
fn bad(x: i32) {
    tsuno::assert!(x == 0);
}

fn main() {}
